--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,6 @@
             <artifactId>jung-io</artifactId>
             <version>2.1.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20180813</version>
-        </dependency>
 
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
@@ -113,7 +108,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>test.Main</mainClass>
+                    <mainClass>graphrecommender.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
